training/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: apis.thinktech.sn
    http:
      paths:
        - path: /v1/(.*)
          backend:
            serviceName: quarkus-rest
            servicePort: 9090
